--- a/scss/guide.scss
+++ b/scss/guide.scss
@@ -7,7 +7,7 @@ body {
 
 #content {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr;
 }
 
 #content main {
@@ -71,3 +71,4 @@ section {
     background-color: var(--secondary-color);
     height: 27rem;
 }
+
